Added jvmArgs(-XX:+EnableDynamicAgentLoading) as suggested